Update document for module supporting